--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "mongoose": "^7.4.1"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
+        "@types/cookie-parser": "^1.4.3",
         "@types/express": "^4.17.17",
         "nodemon": "^3.0.1",
         "ts-node": "^10.9.1",
